Install core dependencies

--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "eslint-config-prettier": "^8.3.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.6"
   }
 }
