--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
+    "express": "^5.0.0-alpha.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6"
   }
